--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -27,6 +27,8 @@
   flex-direction: column;
   align-items: center;
   padding-top: 60px;
+  padding-bottom: 60px;
+  gap: 2rem;
 }
 .main h3 {
   font-size: 32px;
@@ -72,30 +74,12 @@
   width: 800px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem;
-}
-
-.main p {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-.main p:last-child {
-  margin: 0;
-}
-
-.main pre,
-.main code {
-  white-space: pre-wrap;
-  word-wrap: break-word;
-  overflow-x: auto;
-  max-width: 600px;
 }
 
 .conversationControls {
-  width: 800px;
+  width: 620px;
   display: flex;
   flex-direction: row;
-  margin-bottom: 2rem;
   gap: 1rem;
 }
 
@@ -103,7 +87,7 @@
   flex: 1;
   padding: 12px 0;
   color: #fff;
-  background-color: #10a37f;
+  background-color: #666;
   border: none;
   border-radius: 4px;
   text-align: center;
